--- a/4_props/index_1.html
+++ b/4_props/index_1.html
@@ -6,10 +6,10 @@
   <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
-		const Btn = ({ text, onClick }) => {
+		const Btn = ({ text, changeValue }) => {
 			return (
 				<button
-          onClick={onClick}
+          onClick={changeValue}
 					style={
 						{
 							backgroundColor: "tomato",
@@ -24,12 +24,13 @@
 				</button>
 			);
 		}
+    const MemorizedBtn = React.memo(Btn)
 		const App = () => {
       const [value, setValue] = React.useState("Save Changes");
       const changeValue = () => setValue("Revert Changes");
       return (
         <div>
-					<Btn text={value} onClick={changeValue} />
+					<Btn text={value} changeValue={changeValue} />
 					<Btn text="Continue" />
         </div>
       );
