--- a/4_props/index_2.html
+++ b/4_props/index_2.html
@@ -2,14 +2,14 @@
   <body>
     <div id="root"></div>
   </body>
-  <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
+  <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+  <script crossorigin src="https://unpkg.com/prop-types@15.8.1/prop-types.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
-		const Btn = ({ text, onClick }) => {
+		const Btn = ({ text, fontSize }) => {
 			return (
 				<button
-          onClick={onClick}
 					style={
 						{
 							backgroundColor: "tomato",
@@ -17,6 +17,7 @@
 							padding: "10px 20px",
 							border: 0,
 							borderRadius: 10,
+              fontSize,
 						}
 					}
 				>
@@ -24,13 +25,12 @@
 				</button>
 			);
 		}
+    const MemorizedBtn = React.memo(Btn)
 		const App = () => {
-      const [value, setValue] = React.useState("Save Changes");
-      const changeValue = () => setValue("Revert Changes");
       return (
         <div>
-					<Btn text={value} onClick={changeValue} />
-					<Btn text="Continue" />
+					<Btn text="Save Changes" fontSize={18} />
+          <Btn text="Save Changes" fontSize={18} />
         </div>
       );
     }
