--- a/4_props/index_2.html
+++ b/4_props/index_2.html
@@ -7,7 +7,7 @@
   <script crossorigin src="https://unpkg.com/prop-types@15.8.1/prop-types.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
-		const Btn = ({ text, fontSize }) => {
+		const Btn = ({ text, fontSize = 18 }) => {
 			return (
 				<button
 					style={
@@ -25,7 +25,10 @@
 				</button>
 			);
 		}
-    const MemorizedBtn = React.memo(Btn)
+    Btn.propTypes = {
+			text: PropTypes.string.isRequired,
+			fontSize: PropTypes.number,
+		};
 		const App = () => {
       return (
         <div>
